new Dockerfile
Resolve #113 and #114